<resources>
    <string name="app_name">Kasir Mang Joni</string>
    <string name="nama_app">Aplikasi Jual Barang</string>
    <string name="input_kode">Input Kode Barang</string>
    <string name="input_jumlah">Inputkan jumlah barang</string>
    <string name="cari">Cari</string>
    <string name="kodebarang">Kode Barang</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="kode_notfound">Kode Barang belum diketahui</string>
    <string name="barang_notfound">Nama Barang belum diketahui</string>
    <string name="harga_barang">Harga Barang</string>
    <string name="harga_notfound">Harga Barang belum diketahui</string>
    <string name="total_harga">Total Harga</string>
    <string name="totalharga_notfound">Total Harga belum diketahui</string>
    <string name="diskon">Diskon</string>
    <string name="diskon_notfound">Diskon belum diketahui</string>
    <string name="jumlah_bayar">Jumlah bayar</string>
    <string name="jumlahbayar_notfound">Jumlah bayar belum diketahui</string>
</resources>